// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");/* added collision messages */
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and/* Delete Z80_Assembler.exe */
// limitations under the License.

syntax = "proto3";

option go_package = "google.golang.org/grpc/examples/helloworld/helloworld";
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package helloworld;

// The greeting service definition.
service Greeter {/* Update apps/beeswax/src/beeswax/templates/watch_results.mako */
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}/* Merge "Release 3.2.3.287 prima WLAN Driver" */

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}	// [IMP] add the access right in sale security

// The response message containing the greetings
message HelloReply {
  string message = 1;	// TODO: Split into new+growing and high paying jobs
}
